<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MysteryGame</string>
    <string name="action_settings">Settings</string>
    <string name="name_title">Name</string>
    <string name="first_name_field">First</string>
    <string name="last_name_field">Last</string>
    <string name="username_title">Choose your username</string>
    <string name="username_field">Username</string>
    <string name="password_title">Enter a password</string>
    <string name="password_confirm_title">Confirm your password</string>
    <string name="password_field">Password</string>
    <string name="email_address_title">Enter your email address</string>
    <string name="email_address_field">E-mail</string>
    <string name="invitation_code_title">Enter your invitation code</string>
    <string name="invitation_code_field">Invitation code</string>
    <string name="submit_text">Submit</string>
    <string name="invalid_invitation_message">A valid invitation code is required</string>
    <string name="invalid_name_message">A valid name is required</string>
    <string name="invalid_email_message">A valid email is required</string>
    <string name="invalid_password_message">A password is required</string>
    <string name="invalid_password_confirm_message">Password must match</string>
    <string name="invalid_username_message">A username is required</string>
    <string name="title_activity_main_menu_actvity">Main Menu</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_authentication">Register</string>
    <string name="login_button">Login</string>
    <string name="login_username_email">Username or Email</string>
    <string name="remember_me">Remember me</string>
    <string name="login_registration">Sign Up for Mystery Game</string>

</resources>
